# friends

./: CMakeLists.txt  README.md  data_load.cpp  data_load.h  generate_data.py  main.cpp
data/: d.txt
